@@ -208,6 +208,11 @@ void APE::Tag::setItem(const String &key, const Item &item)
   d->itemListMap.insert(key.upper(), item);
 }
 
+bool APE::Tag::isEmpty() const
+{
+  return d->itemListMap.isEmpty();
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // protected methods
 ////////////////////////////////////////////////////////////////////////////////
