@@ -2,6 +2,8 @@ TagLib 1.7
 ==========
 
  * Support for reading/writing tags from Monkey's Audio files.
+ * Implemented APE::Tag::isEmpty() to check for all APE tags, not just the
+   basic ones.
 
 TagLib 1.6.3 (Apr 17, 2010)
 ===========================
